fix: mapper와 dto 기능 구분, 코드 간결화